add: update profile & password endpoint
