# src/controller/auth.controller.ts
@@ -1,61 +1,20 @@
 import { Request, Response } from "express";
-import * as Yup from "yup";
-import UserModel from "../models/user.model";
+import UserModel, {
+  userDTO,
+  userLoginDTO,
+  userUpdatePasswordDTO,
+} from "../models/user.model";
 import { encrypt } from "../utils/encryption";
 import { generateToken } from "../utils/jwt";
 import { IReqUser } from "../utils/interface";
 import response from "../utils/response";
 
-type TRegister = {
-  fullName: string;
-  userName: string;
-  email: string;
-  password: string;
-  confirmPassword: string;
-};
-
-type TLogin = {
-  identifier: string;
-  password: string;
-};
-
-const registerValidateSchema = Yup.object({
-  fullName: Yup.string().required(),
-  userName: Yup.string().required(),
-  email: Yup.string().required(),
-  password: Yup.string()
-    .required()
-    .min(6, "Password harus minimal 6 karakter")
-    .test(
-      "minimal-terdapat-satu-huruf-besar",
-      "Password minimal terdapat 1 huruf besar",
-      (value) => {
-        if (!value) return false;
-        const regex = /^(?=.*[A-Z])/;
-        return regex.test(value);
-      }
-    )
-    .test(
-      "minimal-terdapat-satu-angka",
-      "Password minimal terdapat angka",
-      (value) => {
-        if (!value) return false;
-        const regex = /^(?=.*\d)/;
-        return regex.test(value);
-      }
-    ),
-  confirmPassword: Yup.string()
-    .required()
-    .oneOf([Yup.ref("password"), ""], "Password tidak sama"),
-});
-
 export default {
   async register(req: Request, res: Response) {
-    const { userName, fullName, email, password, confirmPassword } =
-      req.body as unknown as TRegister;
+    const { userName, fullName, email, password, confirmPassword } = req.body;
 
     try {
-      await registerValidateSchema.validate({
+      await userDTO.validate({
         userName,
         fullName,
         email,
@@ -77,9 +36,14 @@ export default {
   },
 
   async login(req: Request, res: Response) {
-    const { identifier, password } = req.body as unknown as TLogin;
     try {
-      //ambil data user berdasarkan "identifier" => email dan username
+      const { identifier, password } = req.body;
+
+      await userLoginDTO.validate({
+        identifier,
+        password,
+      });
+
       const userbyIdentifier = await UserModel.findOne({
         $or: [
           {
@@ -101,7 +65,7 @@ export default {
         encrypt(password) === userbyIdentifier.password;
 
       if (!validatePassword) {
-        return response.unauthorized(res, "user not found!");
+        return response.unauthorized(res, "password salah!");
       }
 
       const token = generateToken({
@@ -112,17 +76,6 @@ export default {
       response.success(res, token, "login berhasil");
     } catch (error) {
       response.error(res, error, "login gagal");
-    }
-  },
-
-  async me(req: IReqUser, res: Response) {
-    try {
-      const user = req.user;
-      const result = await UserModel.findById(user?.id);
-
-      response.success(res, result, "berhasil mengambil user profile");
-    } catch (error) {
-      response.error(res, error, "gagal mengambil user profile");
     }
   },
 
@@ -144,6 +97,76 @@ export default {
       response.success(res, user, "user telah teraktivasi");
     } catch (error) {
       response.error(res, error, "gagal aktivasi user");
+    }
+  },
+
+  async me(req: IReqUser, res: Response) {
+    try {
+      const user = req.user;
+      const result = await UserModel.findById(user?.id);
+
+      response.success(res, result, "berhasil mengambil user profile");
+    } catch (error) {
+      response.error(res, error, "gagal mengambil user profile");
+    }
+  },
+
+  async updateProfile(req: IReqUser, res: Response) {
+    try {
+      const userId = req.user?.id;
+      const { fullName, profilePicture } = req.body;
+
+      const result = await UserModel.findByIdAndUpdate(
+        userId,
+        {
+          fullName,
+          profilePicture,
+        },
+        {
+          new: true,
+        }
+      );
+
+      if (!result) {
+        response.notFound(res, "user tidak ditemukan");
+      }
+
+      response.success(res, result, "berhasi; mengubah user profile");
+    } catch (error) {
+      response.error(res, error, "gagal mengubah user profile");
+    }
+  },
+
+  async updatePassword(req: IReqUser, res: Response) {
+    try {
+      const userId = req.user?.id;
+      const { oldPassword, password, confirmPassword } = req.body;
+
+      await userUpdatePasswordDTO.validate({
+        oldPassword,
+        password,
+        confirmPassword,
+      });
+
+      const user = await UserModel.findById(userId);
+
+      if (!user || user.password !== encrypt(oldPassword)) {
+        return response.notFound(res, "user tidak ditemukan");
+      }
+
+      const result = await UserModel.findByIdAndUpdate(
+        userId,
+        {
+          password: encrypt(password),
+        },
+        {
+          new: true,
+        }
+      );
+
+      response.success(res, result, "password user telah diubah");
+    } catch (error) {
+      response.error(res, error, "gagal mengubah password");
     }
   },
 };
